# libjournal

./: .clang-format  .gitignore  CMakeLists.txt  Containerfile  LICENSE  README.md  build.sh  libjournal.pc.in
.github/workflows/: ci.yml  release.yml
container/: Containerfile  run-tests.sh
packaging/: libjournal.spec
packaging/debian/: .gitignore  changelog  control  copyright  libjournal-dev.install  libjournal-static.install  libjournal0.install  rules
src/demo/: CMakeLists.txt  main.c
src/lib/: CMakeLists.txt  encode.c  encode.h  journal.c  journal.h  journal.h.in  transport.c  transport.h  util.c  util.h
src/test/: CMakeLists.txt  test_journal.c
